<resources>
    <string name="app_name">Box Office</string>
    <string name="api_key"></string>
    <string name="error_message">OOPS! Something went wrong.</string>
    <string name="user_rating_value">%1$s / 10</string>
    <string name="info">info</string>
    <string name="MostPopular">Most Popular</string>
    <string name="HighestRated">Highest Rated</string>
    <string name="favourite">Favourites</string>
    <string name="favouriteButton">Favourite Button</string>
    <string name="PosterDetail">Movie Poster</string>
    <string name="MovieName">Movie Name</string>
    <string name="share">Share</string>


    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
