<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/relative_layout_da"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:fillViewport="true"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Activity.DetailsActivity">

                <ImageView
                    android:id="@+id/poster_iv_detail"
                    android:layout_width="351.5625dp"
                    android:layout_height="515.625dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/PosterDetail" />

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/poster_iv_detail"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/info"
                    android:textColor="@color/colorLight" />

                <View
                    android:id="@+id/vv"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/poster_iv_detail"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_toLeftOf="@id/tvText"
                    android:background="@color/colorLight" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/poster_iv_detail"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@id/tvText"
                    android:background="@color/colorLight" />

                <TextView
                    android:id="@+id/title_tv_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/vv"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/release_tv_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_tv_detail"
                    android:layout_marginLeft="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/release_tv_detail"
                    android:layout_marginLeft="16dp"
                    android:text="Rating:"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating_tv_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/release_tv_detail"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/tv2"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/synopsis_tv_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv2"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/trailer_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/title_tv_detail"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/release_tv_detail"
                    android:background="@drawable/trailer_button_selector"
                    android:clickable="true"
                    android:text="WATCH TRAILER"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/reviews_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/synopsis_tv_detail"
                    android:layout_marginLeft="16dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:text="Read Reviews >>"
                    android:textColor="@drawable/review_button_selector"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:visibility="visible" />


            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favourite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_favorite_48dp"
            android:title="@string/favouriteButton"
            app:backgroundTint="@color/colorLight"
            app:layout_anchor="@id/ScrollView01"
            app:layout_anchorGravity="bottom|end"
            app:showAsAction="always" />
    </RelativeLayout>

</layout>